refactored the query builder

--- a/webif/index.html
+++ b/webif/index.html
@@ -43,6 +43,7 @@
   -->
   <script src="deps/angular.min.js"></script>
   <script src="deps/angular-route.min.js"></script>
+  <script src="util.js"></script>
   <script src="app.js"></script>
 </html>
 
