adding columns to the result table

--- a/webif/index.html
+++ b/webif/index.html
@@ -11,6 +11,7 @@
     <link
         href='//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.2.0/css/bootstrap.min.css'
         rel='stylesheet' type='text/css'-->
+    <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='deps/bootstrap.min.css' rel='stylesheet' type='text/css'>
     <style>
       body {
@@ -43,6 +44,7 @@
   -->
   <script src="deps/angular.min.js"></script>
   <script src="deps/angular-route.min.js"></script>
+  <script src="deps/ui-bootstrap-tpls-0.11.0.js"></script>
   <script src="util.js"></script>
   <script src="app.js"></script>
 </html>
