working query builderish

--- a/webif/index.html
+++ b/webif/index.html
@@ -23,6 +23,10 @@
         margin: 0em 0 2em 0;
         border-bottom: 1px solid #eee;
       }
+
+      .table-wrapper {
+        overflow-x: scroll;
+      }
     </style>
   </head>
   <body>
@@ -45,7 +49,7 @@
   <script src="deps/angular.min.js"></script>
   <script src="deps/angular-route.min.js"></script>
   <script src="deps/ui-bootstrap-tpls-0.11.0.js"></script>
-  <script src="util.js"></script>
+  <!--script src="util.js"></script-->
   <script src="app.js"></script>
 </html>
 
