--- a/webif/query.html
+++ b/webif/query.html
@@ -3,28 +3,39 @@
     ng-show="loading">
     <strong>Loading data from the server...</strong>
   </div>
-
-  <table class="table table-condensed table-bordered"
-    ng-controller="ResultTableCtrl">
-    <tr>
-      <th ng-repeat="header in headers">
-        {{header.name}}
-      </th>
-    </tr>
-    <tr ng-repeat="row in rows">
-      <td ng-repeat="column in row">
-        {{column.data.value}}
-      </td>
-    </tr>
-  </table>
+  
+  <div class="table-wrapper">
+    <table class="table table-condensed table-bordered"
+      ng-controller="ResultTableCtrl">
+      <tr>
+        <th ng-repeat="field in fields">
+          <span class="dropdown">
+            <a href dropdown-toggle>
+              <i class="fa fa-ellipsis-v"></i>
+              {{fieldAttribute(field).label}}
+            </a>
+            <ul class="dropdown-menu">
+              <li><a href dropdown-toggle ng-click="removeColumn(field)">Remove this column</a></li>
+            </ul>
+          </span>
+        </th>
+      </tr>
+      <tr ng-repeat="row in rows">
+        <td ng-repeat="column in row">
+          {{column.value}}
+        </td>
+      </tr>
+    </table>
+  </div>
 </div>
 <div class="col-md-4">
-  <div ng-repeat="branch in branches"
-       ng-controller="BranchCtrl">
+  <div ng-repeat="object in objects"
+       ng-controller="QueryObjectCtrl">
     <div class="panel panel-default">
       <div class="panel-heading">
         <span class="dropdown">
-          Find <strong><a href class="dropdown-toggle">{{getSchemaLabel()}}</a></strong>
+          {{actionLabel()}}
+          <strong><a href class="dropdown-toggle">{{getSchemaLabel()}}</a></strong>
           <ul class="dropdown-menu">
             <li ng-repeat="schema in visibleSchemata">
               <a href dropdown-toggle ng-click="setSchema(schema)">
@@ -35,7 +46,10 @@
         </span>
       </div>
       <div class="panel-body">
-        <!--div ng-repeat="a in attributes">{{a.label}}</div-->
+        <div class="row" ng-repeat="prop in object.filters.properties">
+          <div class="col-sm-4"><strong>{{prop.name}}</strong></div>
+          <div class="col-sm-8"><input type="text" ng-model="prop.value"></div>
+        </div>
 
         <div class="btn-group">
           <div class="btn-group dropdown">
@@ -43,8 +57,8 @@
               <i class="fa fa-filter"></i> Apply filter
             </button>
             <ul class="dropdown-menu" role="menu">
-              <li ng-repeat="attr in attributes">
-                <a href>{{attr.label}}</a>
+              <li ng-repeat="attr in availableFilters()">
+                <a href dropdown-toggle ng-click="addFilter(attr)">{{attr.label}}</a>
               </li>
             </ul>
           </div>
@@ -53,13 +67,15 @@
               <i class="fa fa-plus-circle"></i> Add columns
             </button>
             <ul class="dropdown-menu" role="menu">
-              <li ng-repeat="attr in columnAttributes()">
-                <a href dropdown-toggle ng-click="addColumn(attr)">{{attr.label}}</a>
+              <li ng-repeat="attr in availableFields()">
+                <a href dropdown-toggle ng-click="addField(attr)">{{attr.label}}</a>
               </li>
             </ul>
           </div>
         </div>
-        <!-- button type="button" class="btn btn-default"><i class="fa fa-plus-circle"></i> Link</button-->
+        <button ng-show="canAddLayer()" type="button" class="btn btn-default" ng-click="addLayer()">
+          <i class="fa fa-plus-circle"></i> Relationships
+        </button>
       </div>
     </div>
   </div>
