--- a/webif/query.html
+++ b/webif/query.html
@@ -12,7 +12,7 @@
           <span class="dropdown">
             <a href dropdown-toggle>
               <i class="fa fa-ellipsis-v"></i>
-              {{fieldAttribute(field).label}}
+              {{getFieldAttribute(field).label}}
             </a>
             <ul class="dropdown-menu">
               <li><a href dropdown-toggle ng-click="removeColumn(field)">Remove this column</a></li>
@@ -35,7 +35,9 @@
       <div class="panel-heading">
         <span class="dropdown">
           {{actionLabel()}}
-          <strong><a href class="dropdown-toggle">{{getSchemaLabel()}}</a></strong>
+          <strong><a href class="dropdown-toggle">
+              {{getSchemaLabel()}} <i class="fa fa-caret-square-o-down"></i>
+          </a></strong>
           <ul class="dropdown-menu">
             <li ng-repeat="schema in visibleSchemata">
               <a href dropdown-toggle ng-click="setSchema(schema)">
@@ -51,6 +53,24 @@
           <div class="col-sm-8"><input type="text" ng-model="prop.value"></div>
         </div>
 
+        <div class="dropdown">
+          <p>
+            Showing
+            <span ng-show="object.fields.properties.length==0">no details, </span>
+            <span ng-repeat="field in object.fields.properties">
+              <strong>{{getFieldAttribute(field, object.type).label}}</strong>, 
+            </span>
+            <a href dropdown-toggle>
+              add columns.
+            </a>
+            <ul class="dropdown-menu" role="menu">
+              <li ng-repeat="attr in availableFields()">
+                <a href dropdown-toggle ng-click="addField(attr)">{{attr.label}}</a>
+              </li>
+            </ul>
+          </p>
+        </div>
+
         <div class="btn-group">
           <div class="btn-group dropdown">
             <button type="button" class="btn btn-default" dropdown-toggle>
@@ -62,7 +82,7 @@
               </li>
             </ul>
           </div>
-          <div class="btn-group dropdown">
+          <!--div class="btn-group dropdown">
             <button type="button" class="btn btn-default" dropdown-toggle>
               <i class="fa fa-plus-circle"></i> Add columns
             </button>
@@ -72,7 +92,7 @@
               </li>
             </ul>
           </div>
-        </div>
+        </div-->
         <button ng-show="canAddLayer()" type="button" class="btn btn-default" ng-click="addLayer()">
           <i class="fa fa-plus-circle"></i> Relationships
         </button>
